// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`이전 배송지가 없는 경우 Snapshot 1`] = `
<div>
  <form>
    <h2>
      배송지 정보 입력
    </h2>
    <fieldset>
      <legend>
        연락처
      </legend>
      <div>
        <label>
          전화번호
          <input
            name="phoneNumber"
            type="text"
          />
        </label>
      </div>
      <div>
        <label>
          이름
          <input
            name="name"
            type="text"
          />
        </label>
      </div>
    </fieldset>
    <fieldset>
      <legend>
        배송지
      </legend>
      <div>
        <label>
          우편번호
          <input
            name="postalCode"
            placeholder="16397"
            type="text"
          />
        </label>
      </div>
      <div>
        <label>
          시/도
          <input
            name="prefectures"
            placeholder="경기도"
            type="text"
          />
        </label>
      </div>
      <div>
        <label>
          시/군/구
          <input
            name="municipalities"
            placeholder="수원시 권선구"
            type="text"
          />
        </label>
      </div>
      <div>
        <label>
          도로명
          <input
            name="streetNumber"
            placeholder="매곡로 67"
            type="text"
          />
        </label>
      </div>
    </fieldset>
    <hr />
    <div>
      <button>
        주문내용 확인
      </button>
    </div>
  </form>
</div>
`;

exports[`이전 배송지가 있는 경우 Snapshot 1`] = `
<div>
  <form>
    <h2>
      배송지 정보 입력
    </h2>
    <fieldset>
      <legend>
        연락처
      </legend>
      <div>
        <label>
          전화번호
          <input
            name="phoneNumber"
            type="text"
          />
        </label>
      </div>
      <div>
        <label>
          이름
          <input
            name="name"
            type="text"
          />
        </label>
      </div>
    </fieldset>
    <fieldset>
      <legend>
        새로운 배송지를 등록하시겠습니까?
      </legend>
      <label>
        <input
          name="registerDeliveryAddress"
          type="radio"
          value="0"
        />
        아니오
      </label>
      <label>
        <input
          name="registerDeliveryAddress"
          type="radio"
          value="1"
        />
        네
      </label>
    </fieldset>
    <fieldset
      disabled=""
      style="opacity: 0.3;"
    >
      <legend>
        이전 배송지
      </legend>
      <select
        name="pastDeliveryAddress"
      >
        <option
          value="address_id_xxxx"
        >
          우16397 경기도 수원시 권선구 매곡로 67
        </option>
      </select>
    </fieldset>
    <hr />
    <div>
      <button>
        주문내용 확인
      </button>
    </div>
  </form>
</div>
`;
